[hui] Split container overflow fix

--- a/hide_hl/res/ui/style/hui-split-container.less
+++ b/hide_hl/res/ui/style/hui-split-container.less
@@ -3,7 +3,8 @@ hui-split-container {
 	fill-width: 1;
 	fill-height: 1;
 
-	> * {
+	> hui-element {
 		position: absolute;
+		overflow: hidden;
 	}
 }
